sgd/reproduction/playground/objects/SVMXC__Required_Part__c.object
<CustomObject>
    <description>Parts used to perform task</description>
    <fields>
        <fullName>SMAX_PS_Activity_Type__c</fullName>
        <label>アクティビティタイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Activity_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity</label>
        <referenceTo>SVMXC__Activity_Master__c</referenceTo>
        <relationshipLabel>Required Parts</relationshipLabel>
        <relationshipName>Required_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Item_Name__c</fullName>
        <label>見積品目名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Line_Type__c</fullName>
        <label>種別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1001</fullName>
                    <label>人件費</label>
                </value>
                <value>
                    <fullName>1002</fullName>
                    <label>検査機器</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>部品明細</label>
                </value>
                <value>
                    <fullName>1004</fullName>
                    <label>その他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Pack_Unit_No__c</fullName>
        <label>袋単位</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Classification__c</fullName>
        <label>製品区分</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_Service_Target__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Product_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Remarks__c</fullName>
        <label>備考</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_HTSPlantStatus__c</fullName>
        <formula>TEXT( SVMXC__Product__r.SMAX_PS_SAP_HTSPlantStatus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HTSプラントステータス（商品）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Target__c</fullName>
        <label>対象区分</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_Line_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Service_Target</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Unit_Of_Measure__c</fullName>
        <label>単位</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Unit_Of_Measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Use_Purpose__c</fullName>
        <label>用途</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Required Parts</relationshipLabel>
        <relationshipName>Required_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Order_Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Purpose</label>
        <referenceTo>SVMXC__Task_Template__c</referenceTo>
        <relationshipLabel>Required Parts</relationshipLabel>
        <relationshipName>Required_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Required Part</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Required Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>